fix typo in sample config

--- a/config.json.example
+++ b/config.json.example
@@ -4,5 +4,5 @@
   "access_token: "YOUR_ACCESS_TOKEN",
   "refresh_token": "YOUR_REFRESH_TOKEN",
   "start_date": "2020-01-01T00:00:00Z",
-  "user_agent": "tap-snapchat-ads <api_user_email@example.com>"
+  "user_agent": "tap-tiktok-ads <api_user_email@example.com>"
 }
